--- a/how-to-install.html
+++ b/how-to-install.html
@@ -165,17 +165,17 @@
                       <p>Именно эту версию, так как если версия будет выше, то SAMPFUNCS работать не будет, а при запуске будет запускаться одиночная игра.</p>
 
                       <hr />
-                      <p>Установить MoonLoader v.026: <strong><a href="https://github.com/vl4sov/fbitools/raw/master/Script%20requirements/setup-moonloader-026.exe">Скачать</a></strong></p>
+                      <p>Установить MoonLoader v.026: <strong><a href="https://vl4sov.ml/FBITools/requirements/setup-moonloader-026.exe">Скачать</a></strong></p>
 
                       <p>Запустить установщик, галочки установить как на скриншоте и нажать "Далее":</p>
                       <img alt="moonloader" data-align="center" data-entity-type="file" src="/themes/custom/light/img/icons/howmoon.png" />
                       <p>Указать папку с игрой и нажать "Установить".</p>
 
-                      <p>Если в ходе установки возникает ошибка при загрузке компонентов, то необходимо установить модули вручную: <strong><a aria-label=" (откроется в новой вкладке)" href="https://github.com/vl4sov/fbitools/raw/master/Script%20requirements/samp.zip" rel="noreferrer noopener" target="_blank">Скачать</a></strong>
+                      <p>Если в ходе установки возникает ошибка при загрузке компонентов, то необходимо установить модули вручную: <strong><a aria-label=" (откроется в новой вкладке)" href="https://vl4sov.ml/FBITools/requirements/samp.zip" rel="noreferrer noopener" target="_blank">Скачать</a></strong>
                         <br /> Содержимое архива (папку samp) копировать в папку moonloader/lib.</p>
 
                       <hr />
-                      <p>Установить SAMPFUNCS 5.4.1 (рекомендуется): <strong><a href="https://github.com/vl4sov/fbitools/raw/master/Script%20requirements/SAMPFUNCS.asi" rel="noreferrer noopener" target="_blank">Скачать</a></strong></p>
+                      <p>Установить SAMPFUNCS 5.4.1 (рекомендуется): <strong><a href="https://vl4sov.ml/FBITools/requirements/SAMPFUNCS.asi" rel="noreferrer noopener" target="_blank">Скачать</a></strong></p>
 
                       <p>Файл SAMPFUNCS.asi перенести в папку с игрой.</p>
 
