--- a/index.html
+++ b/index.html
@@ -71,6 +71,28 @@
 
                     <nav>
                       <ul>
+                        
+                          <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                              <a href="/index.html">ГЛАВНАЯ</a>
+                            </div>
+                          </div>
+                          <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                              <a href="/lua.html">LUA</a>
+                            </div>
+                          </div>
+                          <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                              <a href="https://vk.me/vl4sov.kostya">ПОДДЕРЖКА</a>
+                            </div>
+                          </div>
+                          <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                              <a href="/about.html">INFO</a>
+                            </div>
+                          </div>
+                        <!--
                         <li>
                           <a href="/" data-drupal-link-system-path="&lt;front&gt;" class="is-active">Главная</a>
                         </li>
@@ -83,6 +105,7 @@
                         <li>
                           <a href="/about.html" data-drupal-link-system-path="node/15">INFO</a>
                         </li>
+                        -->
                       </ul>
                     </nav>
 
@@ -95,6 +118,28 @@
                   <nav>
 
                     <ul>
+                      
+                          <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                              <a href="/index.html">ГЛАВНАЯ</a>
+                            </div>
+                          </div>
+                          <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                              <a href="/lua.html">LUA</a>
+                            </div>
+                          </div>
+                          <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                              <a href="https://vk.me/vl4sov.kostya">ПОДДЕРЖКА</a>
+                            </div>
+                          </div>
+                          <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                              <a href="/about.html">INFO</a>
+                            </div>
+                          </div>
+                      <!--
                       <li>
                         <a href="/" data-drupal-link-system-path="&lt;front&gt;" class="is-active">Главная</a>
                       </li>
@@ -107,6 +152,7 @@
                       <li>
                         <a href="/about.html" data-drupal-link-system-path="node/15">INFO</a>
                       </li>
+                      -->
                     </ul>
 
                   </nav>
