--- a/index.html
+++ b/index.html
@@ -71,34 +71,28 @@
 
                     <nav>
                       <ul>
-                        <li>
                           <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
                             <div class="main-page--nav-items d-flex justify-content-center">
-                              <a href="/index.html">ГЛАВНАЯ</a>
+                              <li>
+                                <a href="/index.html">ГЛАВНАЯ</a>
+                              </li>
                             </div>
-                          </div>
-                        </li>
-                        <li>
-                          <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
                             <div class="main-page--nav-items d-flex justify-content-center">
-                              <a href="/lua.html">LUA</a>
+                              <li>
+                                <a href="/index.html">LUA</a>
+                              </li>
                             </div>
-                          </div>
-                        </li>
-                        <li>
-                          <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
                             <div class="main-page--nav-items d-flex justify-content-center">
-                              <a href="https://vk.me/vl4sov.kostya">ПОДДЕРЖКА</a>
+                              <li>
+                                <a href="/index.html">ПОДДЕРЖКА</a>
+                              </li>
                             </div>
-                          </div>
-                        </li>
-                        <li>
-                          <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
                             <div class="main-page--nav-items d-flex justify-content-center">
-                              <a href="/about.html">INFO</a>
+                              <li>
+                                <a href="/index.html">INFO</a>
+                              </li>
                             </div>
                           </div>
-                        </li>
                         <!--
                         <li>
                           <a href="/" data-drupal-link-system-path="&lt;front&gt;" class="is-active">Главная</a>
@@ -125,34 +119,28 @@
                   <nav>
 
                     <ul>
-                        <li>
                           <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
                             <div class="main-page--nav-items d-flex justify-content-center">
-                              <a href="/index.html">ГЛАВНАЯ</a>
+                              <li>
+                                <a href="/index.html">ГЛАВНАЯ</a>
+                              </li>
                             </div>
-                          </div>
-                        </li>
-                        <li>
-                          <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
                             <div class="main-page--nav-items d-flex justify-content-center">
-                              <a href="/lua.html">LUA</a>
+                              <li>
+                                <a href="/index.html">LUA</a>
+                              </li>
                             </div>
-                          </div>
-                        </li>
-                        <li>
-                          <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
                             <div class="main-page--nav-items d-flex justify-content-center">
-                              <a href="https://vk.me/vl4sov.kostya">ПОДДЕРЖКА</a>
+                              <li>
+                                <a href="/index.html">ПОДДЕРЖКА</a>
+                              </li>
                             </div>
-                          </div>
-                        </li>
-                        <li>
-                          <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
                             <div class="main-page--nav-items d-flex justify-content-center">
-                              <a href="/about.html">INFO</a>
+                              <li>
+                                <a href="/index.html">INFO</a>
+                              </li>
                             </div>
                           </div>
-                        </li>
                       <!--
                       <li>
                         <a href="/" data-drupal-link-system-path="&lt;front&gt;" class="is-active">Главная</a>
