--- a/fbitools.html
+++ b/fbitools.html
@@ -71,18 +71,26 @@
 
                   <nav>
                     <ul>
-                      <li>
-                        <a href="/" data-drupal-link-system-path="&lt;front&gt;" class="is-active">Главная</a>
-                      </li>
-                      <li>
-                        <a href="/lua.html" data-drupal-link-system-path="lua">Lua</a>
-                      </li>
-                      <li>
-                        <a href="https://vk.me/vl4sov.kostya">Поддержка</a>
-                      </li>
-                      <li>
-                        <a href="/about.html" data-drupal-link-system-path="node/15">INFO</a>
-                      </li>
+                        <li>
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                              <a href="index.html">ГЛАВНАЯ</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                                <a href="lua.html">LUA</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                                <a href="https://vk.me/vl4sov.kostya">ПОДДЕРЖКА</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                                  <a href="about.html">INFO</a>
+                            </div>
+                        </li>
                     </ul>
                   </nav>
 
@@ -95,18 +103,26 @@
                 <nav>
 
                   <ul>
-                    <li>
-                      <a href="/" data-drupal-link-system-path="&lt;front&gt;" class="is-active">Главная</a>
-                    </li>
-                    <li>
-                      <a href="/lua.html" data-drupal-link-system-path="lua">Lua</a>
-                    </li>
-                    <li>
-                      <a href="https://vk.me/vl4sov.kostya">Поддержка</a>
-                    </li>
-                    <li>
-                      <a href="/about.html" data-drupal-link-system-path="node/15">INFO</a>
-                    </li>
+                        <li>
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                              <a href="index.html">ГЛАВНАЯ</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                                <a href="lua.html">LUA</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                                <a href="https://vk.me/vl4sov.kostya">ПОДДЕРЖКА</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                                  <a href="about.html">INFO</a>
+                            </div>
+                        </li>
                   </ul>
 
                 </nav>
