--- a/anticasino.html
+++ b/anticasino.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru" dir="ltr" prefix="content: http://purl.org/rss/1.0/modules/content/  dc: http://purl.org/dc/terms/  foaf: http://xmlns.com/foaf/0.1/  og: http://ogp.me/ns#  rdfs: http://www.w3.org/2000/01/rdf-schema#  schema: http://schema.org/  sioc: http://rdfs.org/sioc/ns#  sioct: http://rdfs.org/sioc/types#  skos: http://www.w3.org/2004/02/skos/core#  xsd: http://www.w3.org/2001/XMLSchema# ">
-<title>vl4sov | FBI Tools</title>
-<meta property="og:title" content="vl4sov | FBI Tools" />
+<title>vl4sov | AntiCasino</title>
+<meta property="og:title" content="vl4sov | AntiCasino" />
 <head>
   <meta charset="utf-8" />
   <meta name="MobileOptimized" content="width" />
@@ -71,18 +71,26 @@
 
                   <nav>
                     <ul>
-                      <li>
-                        <a href="/" data-drupal-link-system-path="&lt;front&gt;" class="is-active">Главная</a>
-                      </li>
-                      <li>
-                        <a href="/lua.html" data-drupal-link-system-path="lua">Lua</a>
-                      </li>
-                      <li>
-                        <a href="https://vk.me/vl4sov.kostya">Поддержка</a>
-                      </li>
-                      <li>
-                        <a href="/about.html" data-drupal-link-system-path="node/15">INFO</a>
-                      </li>
+                        <li>
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                              <a href="index.html">ГЛАВНАЯ</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                                <a href="lua.html">LUA</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                                <a href="https://vk.me/vl4sov.kostya">ПОДДЕРЖКА</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                                  <a href="about.html">INFO</a>
+                            </div>
+                        </li>
                     </ul>
                   </nav>
 
@@ -95,18 +103,26 @@
                 <nav>
 
                   <ul>
-                    <li>
-                      <a href="/" data-drupal-link-system-path="&lt;front&gt;" class="is-active">Главная</a>
-                    </li>
-                    <li>
-                      <a href="/lua.html" data-drupal-link-system-path="lua">Lua</a>
-                    </li>
-                    <li>
-                      <a href="https://vk.me/vl4sov.kostya">Поддержка</a>
-                    </li>
-                    <li>
-                      <a href="/about.html" data-drupal-link-system-path="node/15">INFO</a>
-                    </li>
+                        <li>
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                              <a href="index.html">ГЛАВНАЯ</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                                <a href="lua.html">LUA</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                                <a href="https://vk.me/vl4sov.kostya">ПОДДЕРЖКА</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="main-page--nav-items d-flex justify-content-center">
+                                  <a href="about.html">INFO</a>
+                            </div>
+                        </li>
                   </ul>
 
                 </nav>
@@ -134,17 +150,17 @@
                       <div class="row align-items-center">
                         <div class="col-2">
                           <div class="lua-script--version">
-                            Версия 6.17
+                            Версия 1.00
                           </div>
                         </div>
                         <div class="col-8">
                           <h1 class="lua-script--title">
-              FBI Tools
+              AntiCasino
             </h1>
                         </div>
                         <div class="col-2">
                           <div class="lua-script--date-update" title="Дата обновления">
-                            12.05.2021
+                            22.05.2021
                           </div>
                         </div>
                       </div>
@@ -153,18 +169,18 @@
                     <div class="lua-script--version-n-date-update-md">
                       <div>
                         <h2 class="lua-script--title">
-            FBI Tools
+            AntiCasino
           </h2>
                       </div>
                       <div class="row">
                         <div class="col-6">
                           <div class="lua-script--version">
-                            Версия 6.17
+                            Версия 1.00
                           </div>
                         </div>
                         <div class="col-6">
                           <div class="lua-script--date-update" title="Дата обновления">
-                            12.05.2021
+                            22.05.2021
                           </div>
                         </div>
                       </div>
@@ -177,55 +193,23 @@
                     <ol class="breadcrumb">
                       <li class="breadcrumb-item"><a href="/">Главная</a></li>
                       <li class="breadcrumb-item"><a href="/lua.html">Lua</a></li>
-                      <li class="breadcrumb-item active" aria-current="page">FBI Tools</li>
+                      <li class="breadcrumb-item active" aria-current="page">AntiCasino</li>
                     </ol>
                   </nav>
                   </div>
 
                   <div class="lua-script--foreground">
                     <div class="lua-script--description">
-                      <p><strong>FBI Tools</strong> - это многофункциональный скрипт работающий на базе библиотеки 'MoonLoader', написанный на платформе Lua, целью которого является облегчение работы для сотрудников правоохранительных органов. Включает в себя упрощённую систему выдачи розыска за определённую причину, автоматическую Role Play отыгровку при использовании некоторых команд и/или нажатии определённых кнопок, упрощённый диалог с игроками и красивый интерфейс. А так же многие различные функци которые упрощают работу в государственных организациях.</p>
+                      <p><strong>AntiCasino</strong> - это скрипт работающий на базе библиотеки 'MoonLoader', написанный на платформе Lua, целью которого является закрытие доступа к казино игрока.</p>
 
                       <hr />
-                      <p><strong>Список доступных команд:</strong></p>
+                      <p><strong>Активация автоматическая. Код скрипта открытый, можете изменять под себя.</strong></p>
 
-                      <ul>
-                        <li><strong>/ft</strong> - Открыть основное меню скрипта</li>
-                        <li><strong>/shp</strong> - Открыть шпаргалку</li>
-                        <li><strong>/fnr</strong> - Созвать сотрудников организации на работу</li>
-                        <li><strong>/fmask</strong> - Быстро натянуть маску ( Оптимизировано под Evolve RP )</li>
-                        <li><strong>/fkv [Сектор]</strong> - Установить метку на определённый квадрат</li>
-                        <li><strong>/ticket</strong> - Открыть меню выдачи штрафов</li>
-                        <li><strong>/dlog</strong> - Открыть лог сообщений рации департамента</li>
-                        <li><strong>/rlog</strong> - Открыть лог сообщений фракционной рации</li>
-                        <li><strong>/sulog</strong> - Открыть лог объявлений в розыск</li>
-                        <li><strong>/smslog</strong> - Открыть лог личных сообщений</li>
-                        <li><strong>/kmdc</strong> - Пробить саспекта по базе данных</li>
-                        <li><strong>/su [ID]</strong> - Объявить в розыск по выбранной в списке статье</li>
-                        <li><strong>/megaf [ID]</strong> или <strong>/st [ID/Опционально]</strong> - Запросить остановку транспортного средства</li>
-                        <li><strong>/ak</strong> - Открыть окно с отображением Административного Кодекса</li>
-                        <li><strong>/yk</strong> - Открыть окно с отображением Уголовного Кодекса</li>
-                        <li><strong>/fp</strong> - Открыть окно с отображением Федерального Постановления</li>
-                        <li><strong>/warn [ID]</strong> - Выдать предупреждение по волне департамента за неправильныую выдачу розыска</li>
-                        <li><strong>/dmb</strong> - Открыть окно с отображением /members</li>
-                        <li><strong>/mb</strong> - Сокращение команды /members</li>
-                        <li><strong>/blg [ID] [Фракция] [Причина]</strong> - Высказать благодарность по волне департамента</li>
-                        <li><strong>/cc</strong> - Очистить чат</li>
-                        <li><strong>/df</strong> - Открыть меню разминирования бомбы</li>
-                        <li><strong>...</strong> - И многие другие команды для облегчения игры</li>
-                      </ul>
-
-                      <p><strong>Меню скрипта ( /ft ):</strong></p>
+                      <p><strong>Демонстрация работы скрипта</strong></p>
                       <p> </p>
-                      <img alt="fbitools_info.jpg" data-align="center" data-entity-type="file" src="/themes/custom/light/img/icons/fbitools_info.jpg" />
-                      <p> </p>
-                      <img alt="fbitools_settings.jpg" data-align="center" data-entity-type="file" src="/themes/custom/light/img/icons/fbitools_settings.jpg" />
-                      <p> </p>
-                      <img alt="fbitools_akfpyk.jpg" data-align="center" data-entity-type="file" src="/themes/custom/light/img/icons/fbitools_akfpyk.jpg" />
+                      <img alt="AntiCasino.png" data-align="center" data-entity-type="file" src="/themes/custom/light/img/icons/AntiCasino.png" />
                       
                       <hr />
-
-                      <p class="has-medium-font-size"><strong>Более подробную информацию можно посмотреть в <a href="https://vk.com/fbitools03">группе</a> скрипта.</strong></p>
 
                     </div>
                   </div>
@@ -240,8 +224,7 @@
                         <div>SAMPFUNCS v.5.3.3 и выше</div>
                         <div>moonloader</div>
                         <div>CLEO</div>
-                        <div>Дополнительные библиотеки загружаются в игре</div>
-                        <div>Windows 7 и выше</div>
+                        <div>Библиотека SAMP.lua</div>
                       </div>
 
                     </div>
@@ -260,7 +243,7 @@
                           <div>
                             <div class="row">
                               <div class="col lua-script--compatibility--col">Samp RP</div>
-                              <div class="col lua-script--compatibility--col">Частично совместим</div>
+                              <div class="col lua-script--compatibility--col">Совместим</div>
                             </div>
                           </div>
                         </div>
@@ -282,7 +265,7 @@
 
                       <div class="col">
                         <div class="lua-button">
-                          <a class="btn btn-outline-primary lua-download-btn" href="https://vl4sov.ml/FBITools/FBITools.zip">
+                          <a class="btn btn-outline-primary lua-download-btn" href="https://vl4sov.ml/AntiCasino/AntiCasino.zip">
       Скачать
     </a>
                         </div>
