--- a/lua.html
+++ b/lua.html
@@ -196,25 +196,24 @@
                       </div>
                     </div>
                     <div class="card-container col-xl-3 col-lg-3 col-md-6 col-sm-12">
-                      <!--[if Новый скрипт код]>
-                      <div class="card mb-3">
+                    <div class="card mb-3">
                         <div class="card-body">
                           <h5 class="card-title">
-                    Aim Anim
+                    AntiCasino
                                           <span
                         class="badge btn-primary">New</span>
                                       </h5>
-                          <p class="card-text">Блокирует анимацию прицеливания для открытия чата. Активация на ПКМ+Alt.
+                          <p class="card-text">Cкрипт целью которого является закрытие доступа к казино игроку.
                           </p>
-                          <a href="/lua/aim-anim" class="btn btn-outline-primary card-button">Перейти</a>
+                          <a href="/lua/anticasino.html" class="btn btn-outline-primary card-button">Перейти</a>
                         </div>
                         <div class="card-footer">
                           <div class="row">
                             <div class="col-6">
                             </div>
                             <div class="col-6">
-                              <div class="card-version" title="Обновлён: 04.12.2019">
-                                Версия 1
+                              <div class="card-version" title="Обновлён: 22.05.2021">
+                                Версия 1.00
                               </div>
                             </div>
                           </div>
@@ -222,7 +221,6 @@
                       </div>
                     </div>
                   </div>
-<![endif]-->
 
                     </div>
                   </div>
