--- a/anticasino.html
+++ b/anticasino.html
@@ -200,7 +200,7 @@
 
                   <div class="lua-script--foreground">
                     <div class="lua-script--description">
-                      <p><strong>AntiCasino</strong> - это скрипт работающий на базе библиотеки 'MoonLoader', написанный на платформе Lua, целью которого является закрытие доступа к казино игрока.</p>
+                      <p><strong>AntiCasino</strong> - это скрипт работающий на базе библиотеки 'MoonLoader', написанный на платформе Lua, целью которого является закрытие доступа к казино игроку.</p>
 
                       <hr />
                       <p><strong>Активация автоматическая. Код скрипта открытый, можете изменять под себя.</strong></p>
