--- a/lua.html
+++ b/lua.html
@@ -205,7 +205,7 @@
                                       </h5>
                           <p class="card-text">Cкрипт целью которого является закрытие доступа к казино игроку.
                           </p>
-                          <a href="/lua/anticasino.html" class="btn btn-outline-primary card-button">Перейти</a>
+                          <a href="/anticasino.html" class="btn btn-outline-primary card-button">Перейти</a>
                         </div>
                         <div class="card-footer">
                           <div class="row">
