--- a/how-to-install.html
+++ b/how-to-install.html
@@ -201,7 +201,7 @@
                       <p>Запустить установщик, выбрать "русский" язык, нажать "далее", указать путь к папке с игрой и подтвердить нажатием на "далее", галочки оставить как есть, нажать "далее", затем "установить".</p>
 
                       <hr />
-                      <p>Как только всё выше будет установлено, необходимо скачать нужный вам скрипт с <a href="/lua.html" rel="noreferrer noopener" target="_blank">главной</a> страницы сайта, открыть архив и содержимое папки "В корневую папку" перенести в папку с игрой.</p>
+                      <p>Как только всё выше будет установлено, необходимо скачать нужный вам скрипт с <a href="/lua.html" rel="noreferrer noopener" target="_blank">главной</a> страницы сайта, открыть архив и содержимое перенести в папку с игрой.</p>
 
                     </div>
                   </div>
