--- a/index.html
+++ b/index.html
@@ -159,116 +159,11 @@
                           </div>
                           <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
                             <div class="main-page--nav-items d-flex justify-content-center">
-                              <a href="about.html">INFO</a>
+                              <a href="http://logsvl4sov.ml/">LOGS</a>
                             </div>
                           </div>
                         </div>
                       </nav>
-                    </div>
-                  </div>
-
-                  <div class="main-page--arrow">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                  </div>
-
-                  <div class="main-page--news">
-                    <div class="main-page--news--note">
-                      <div class="main-page--news--note-lg">
-                        <div class="row align-items-center">
-                          <div class="col-3">
-                            <div class="main-page--news--note-date">
-                              12.05.2021
-                            </div>
-                          </div>
-                          <div class="col-6">
-                            <div class="main-page--news--note-title">
-                              Обновление FBI Tools
-                            </div>
-                          </div>
-                          <div class="col-3">
-                            <div class="main-page--news--note-section">
-                              version 6.17
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="main-page--news--note-sm">
-                        <div>
-                          <div class="main-page--news--note-title">
-                            Обновление FBI Tools
-                          </div>
-                        </div>
-                        <div class="row">
-                          <div class="col-6">
-                            <div class="main-page--news--note-date">
-                              12.05.2021
-                            </div>
-                          </div>
-                          <div class="col-6">
-                            <div class="main-page--news--note-section">
-                              version 6.17
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="main-page--news--note-content">
-                      <p>• Добавлена возможность отключения всплывающих уведомлений notf</p>
-                      <p>• Добавлена возможность изменения шрифта и размера текста информации патруля</p>
-                      <p>• Добавлено взаимодействие с окружением на кнопку B ( Её кастомизация будет добавлена в последующих версиях. Пока только доступные функции в тестовом варианте. Для открытия меню подойдите к Игроку или Автомобилю и зажмите B )</p>
-                      <p>• Добавлена новая система запроса поддержки в F2</p>
-                      <p>• Пофиксил отображение всплывающего текста при погоне и выдачи автоматического розыска</p>
-
-                      </div>
-                    </div>
-                    <div class="main-page--news--note">
-                      <div class="main-page--news--note-lg">
-                        <div class="row align-items-center">
-                          <div class="col-3">
-                            <div class="main-page--news--note-date">
-                              24.04.2021
-                            </div>
-                          </div>
-                          <div class="col-6">
-                            <div class="main-page--news--note-title">
-                              Создание сайта
-                            </div>
-                          </div>
-                          <div class="col-3">
-                            <div class="main-page--news--note-section">
-                              Сайт
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="main-page--news--note-sm">
-                        <div>
-                          <div class="main-page--news--note-title">
-                            Создание сайта
-                          </div>
-                        </div>
-                        <div class="row">
-                          <div class="col-6">
-                            <div class="main-page--news--note-date">
-                              24.05.2020
-                            </div>
-                          </div>
-                          <div class="col-6">
-                            <div class="main-page--news--note-section">
-                              Сайт
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="main-page--news--note-content">
-                        <p>Создан собственный сайт студии с отображением скриптов и возможностью заказа собственных, а так же отображением всей информации по обновлениям и новостям.</p>
-
-                      </div>
                     </div>
                   </div>
                 </div>
