--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
                         </li>
                         <li>
                             <div class="main-page--nav-items d-flex justify-content-center">
-                                <a href="https://vk.me/vl4sov.kostya">ПОДДЕРЖКА</a>
+                                <a href="https://vk.me/vl4sov">ПОДДЕРЖКА</a>
                             </div>
                         </li>
                         <li>
@@ -115,7 +115,7 @@
                         </li>
                         <li>
                             <div class="main-page--nav-items d-flex justify-content-center">
-                                <a href="https://vk.me/vl4sov.kostya">ПОДДЕРЖКА</a>
+                                <a href="https://vk.me/vl4sov">ПОДДЕРЖКА</a>
                             </div>
                         </li>
                         <li>
@@ -164,7 +164,7 @@
 
                       <p><strong>Связаться с разработчиком можно через:</strong>
                         <br data-rich-text-line-break="true" />
-                        <strong><i class="fa fa-vk" aria-hidden="true"></i></strong> <a href="https://vk.com/vl4sov.kostya"><strong>Костя Власов</strong></a>
+                        <strong><i class="fa fa-vk" aria-hidden="true"></i></strong> <a href="https://vk.com/vl4sov"><strong>Костя Власов</strong></a>
                         <br />
                         <strong><i class="fab fa-discord"></i></strong>    <strong>vl4sov#2625</strong>
                         <br>
