--- a/errors.html
+++ b/errors.html
@@ -82,7 +82,7 @@
                         </li>
                         <li>
                             <div class="main-page--nav-items d-flex justify-content-center">
-                                <a href="https://vk.me/vl4sov.kostya">ПОДДЕРЖКА</a>
+                                <a href="https://vk.me/vl4sov">ПОДДЕРЖКА</a>
                             </div>
                         </li>
                         <li>
@@ -114,7 +114,7 @@
                         </li>
                         <li>
                             <div class="main-page--nav-items d-flex justify-content-center">
-                                <a href="https://vk.me/vl4sov.kostya">ПОДДЕРЖКА</a>
+                                <a href="https://vk.me/vl4sov">ПОДДЕРЖКА</a>
                             </div>
                         </li>
                         <li>
