--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                           </li>
                           <li>
                               <div class="main-page--nav-items d-flex justify-content-center">
-                                  <a href="https://vk.me/vl4sov.kostya">ПОДДЕРЖКА</a>
+                                  <a href="https://vk.me/vl4sov">ПОДДЕРЖКА</a>
                               </div>
                           </li>
                           <li>
@@ -115,7 +115,7 @@
                           </li>
                           <li>
                               <div class="main-page--nav-items d-flex justify-content-center">
-                                  <a href="https://vk.me/vl4sov.kostya">ПОДДЕРЖКА</a>
+                                  <a href="https://vk.me/vl4sov">ПОДДЕРЖКА</a>
                               </div>
                           </li>
                           <li>
