--- a/lua.html
+++ b/lua.html
@@ -84,7 +84,7 @@
                         </li>
                         <li>
                             <div class="main-page--nav-items d-flex justify-content-center">
-                                <a href="https://vk.me/vl4sov.kostya">ПОДДЕРЖКА</a>
+                                <a href="https://vk.me/vl4sov">ПОДДЕРЖКА</a>
                             </div>
                         </li>
                         <li>
@@ -116,7 +116,7 @@
                         </li>
                         <li>
                             <div class="main-page--nav-items d-flex justify-content-center">
-                                <a href="https://vk.me/vl4sov.kostya">ПОДДЕРЖКА</a>
+                                <a href="https://vk.me/vl4sov">ПОДДЕРЖКА</a>
                             </div>
                         </li>
                         <li>
