--- a/lua.html
+++ b/lua.html
@@ -236,7 +236,7 @@
       </div>
       <div align="center">
         <div class="lua-button">
-        <a class="btn btn-outline-primary card-button" href="https://vk.me/vl4sov.kostya">Заказать скрипт</a>
+        <a class="btn btn-outline-primary card-button" href="https://vk.me/vl4sov">Заказать скрипт</a>
         </div>
       </div>
 
