--- a/lua.html
+++ b/lua.html
@@ -218,12 +218,13 @@
                         </div>
                       </div>
                     </div>
+                   </div>
                     <div class="card mb-3">
                       <div class="card-body">
                         <h5 class="card-title">
                   USGO
                                     </h5>
-                        <p class="card-text">Cкрипт для автоматического заполнения логов и слежки за руководством.
+                        <p class="card-text">Cкрипт для автоматического заполнения логов.
                         </p>
                         <a href="/usgo.html" class="btn btn-outline-primary card-button">Перейти</a>
                       </div>
@@ -239,7 +240,6 @@
                         </div>
                       </div>
                     </div>
-                  </div>
                   </div>
 
                     </div>
