--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                           </div>
                           <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
                             <div class="main-page--nav-items d-flex justify-content-center">
-                              <a href="http://logsvl4sov.ml/">LOGS</a>
+                              <a href="http://vl4sov-ml.ml/">LOGS</a>
                             </div>
                           </div>
                         </div>
