--- a/usgo.html
+++ b/usgo.html
@@ -218,7 +218,7 @@
                         <li><strong>•</strong> - Просмотр, а так же отправка своего онлайна в облако</li>
                       </ul>
 
-                      <p><strong>Меню скрипта ( /ft ):</strong></p>
+                      <p><strong>Меню скрипта ( /usgo ):</strong></p>
                       <p> </p>
                       <img alt="usgo1.png" data-align="center" data-entity-type="file" src="/themes/custom/light/img/1.png" />
                       <p> </p>
