--- a/usgo.html
+++ b/usgo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru" dir="ltr" prefix="content: http://purl.org/rss/1.0/modules/content/  dc: http://purl.org/dc/terms/  foaf: http://xmlns.com/foaf/0.1/  og: http://ogp.me/ns#  rdfs: http://www.w3.org/2000/01/rdf-schema#  schema: http://schema.org/  sioc: http://rdfs.org/sioc/ns#  sioct: http://rdfs.org/sioc/types#  skos: http://www.w3.org/2004/02/skos/core#  xsd: http://www.w3.org/2001/XMLSchema# ">
-<title>vl4sov | FBI Tools</title>
+<title>vl4sov | USGO</title>
 <meta property="og:title" content="vl4sov | USGO" />
 <head>
   <meta charset="utf-8" />
