--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/testimonials-1.png" class="testimonial-img" alt="">
-                  <h3>Kostya Vlasov</h3>
+                  <h3>Nikolay Wilde</h3>
                   <h4>developer</h4>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
