--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/testimonials-1.png" class="testimonial-img" alt="">
                   <h3>Nikolay Wilde</h3>
-                  <h4>developer</h4>
+                  <h4>designer</h4>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                     Для установки скриптов требуется лишь перекинуть всё содержимое архива в корневую папку с игрой.
