--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <div class="section-title" data-aos="fade-up">
           <h2>SCRIPTS</h2>
           <p>Для установки необходима установленная GTA San Andreas и SAMP — клиент для игры в GTA San Andreas в многопользовательском режиме версии 0.3.7-R1 либо 0.3.7-R3</p>
-		  <p>При установке скриптов с этого сайта, вы соглашаетесь с <a href="#">пользовательским соглашением</a>.</p>
+		  <p>При установке скриптов с этого сайта, вы соглашаетесь с <a href="terms.html">пользовательским соглашением</a>.</p>
         </div>
 
         <div class="row">
