--- a/usgo.html
+++ b/usgo.html
@@ -206,7 +206,7 @@
 
                       <p><strong>Меню скрипта ( /usgo ):</strong></p>
                       <p> </p>
-                      <img alt="usgo1.png" data-align="center" data-entity-type="file" src="/themes/custom/light/img/1.jpeg" />
+                      <img alt="usgo1.jpeg" data-align="center" data-entity-type="file" src="/themes/custom/light/img/1.jpeg" />
                       <p> </p>
                       <img alt="usgo2.png" data-align="center" data-entity-type="file" src="/themes/custom/light/img/2.png" />
                       <p> </p>
