--- a/logs.html
+++ b/logs.html
@@ -157,8 +157,7 @@
                    <nav aria-label="breadcrumb">
                   <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="/">Главная</a></li>
-                    <li class="breadcrumb-item"><a href="/lua.html">Lua</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Пользовательское соглашение</li>
+                    <li class="breadcrumb-item active" aria-current="page">Logs</li>
                   </ol>
                 </nav>
 
